--- a/P006829.opf/meta.yml
+++ b/P006829.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P006829
+id: P006829
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1GS49554
   title: མགོ་ལོག་རིག་གནས་ལོ་རྒྱུས། （༢）
-  volume: ''
   author: ''
+  volumes: {}
