--- a/P006829.opf/meta.yml
+++ b/P006829.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1GS49554
   title: མགོ་ལོག་རིག་གནས་ལོ་རྒྱུས། （༢）
   author: ''
-  volumes: {}
+  volumes:
+    d5970b20f9be426caadaef01fc48727e:
+      image_group_id: I1GS49572
+      title: ''
+      volume_number: 1
+      total_pages: 148
