--- a/P006829.opf/layers/v001/Pagination.yml
+++ b/P006829.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4e88817788f94131a9c3aa3c830c535c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8e95b4adf14a48d58629e29da515012d:
